adding joystick and detecting com ports
fixing and adding lost code due to missynced files

--- a/FightToughEnemyInYourRoomOfChoiceSimulator/FightToughEnemyInYourRoomOfChoiceSimulator.csproj
+++ b/FightToughEnemyInYourRoomOfChoiceSimulator/FightToughEnemyInYourRoomOfChoiceSimulator.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="System.IO.Ports" Version="8.0.0" />
+    <PackageReference Include="System.Management" Version="8.0.0" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
