--- a/FightToughEnemyInYourRoomOfChoiceSimulator/FightToughEnemyInYourRoomOfChoiceSimulator.csproj
+++ b/FightToughEnemyInYourRoomOfChoiceSimulator/FightToughEnemyInYourRoomOfChoiceSimulator.csproj
@@ -13,10 +13,13 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="System.IO.Ports" Version="8.0.0" />
     <PackageReference Include="System.Management" Version="8.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Weighted-Directed Graph\Weighted-Directed Graph\Weighted-Directed Graph.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
